teams/_bases/tenant-core/networkpolicy-mlflow-egress-minio.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mlflow-egress-minio
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: mlflow
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: minio
      podSelector:
        matchLabels:
          app.kubernetes.io/name: minio
    ports:
    - protocol: TCP
      port: 9000
